--- a/DesenvolvimentoWeb/ReceitasFatec/style/style.css
+++ b/DesenvolvimentoWeb/ReceitasFatec/style/style.css
@@ -1,3 +1,6 @@
+body {
+    margin: 0px 100px 0px 100px
+}
 .main {
     display:flex;
     flex-direction: column;
@@ -92,6 +95,7 @@ h4 {
     border-top: 10px solid white
 }
 .lista {
+    padding: 0px;
     text-align: left;
 }
 
@@ -103,5 +107,6 @@ button {
 }
 
 ul {
+    margin:inherit;
     background-color: white;
 }
