--- a/DesenvolvimentoWeb/Luminoso/style/style.css
+++ b/DesenvolvimentoWeb/Luminoso/style/style.css
@@ -85,12 +85,17 @@
     line-height: normal;
 }
 
+.ativo {
+    color: #12A19A;
+}
+
 .slides {
     position: relative;
-    width:100%;
+    width: 100%;
 }
 
 .slideItem {
+    background: linear-gradient(180deg, rgba(38, 38, 37, 0.00) 0%, #262625 100%);
     width: 100%;
     border: 1px solid var(--cor-5);
     background: lightgray 50% / cover no-repeat;
@@ -98,11 +103,11 @@
 
 .conteudo {
     align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  height: 100%;
-  justify-content: center;
-  width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
 }
 
 .pagina {
@@ -177,7 +182,25 @@
 }
 
 .metas {
+    padding: 23px 0px 85px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #262625;
+}
+
+.metasTexto {
+    color: var(--branco);
+    font-family: Poppins;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-bottom: 64px;
 }
