--- a/DesenvolvimentoWeb/Luminoso/style/style.css
+++ b/DesenvolvimentoWeb/Luminoso/style/style.css
@@ -163,12 +163,16 @@
 
 .mudarDiv {
     width: 100%;
+    height:16%;
     position: absolute;
     cursor: pointer;
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin-top: -6%;
+    box-shadow:inset 0px -60px 30px 10px #262625;
+    border: 1px solid var(--cor-5);
+    border-top: none;
 }
 
 .circulo {
@@ -203,4 +207,54 @@
     flex-direction: row;
     justify-content: space-evenly;
     padding-bottom: 64px;
+}
+
+.rodape {
+    padding-top: 100px;
+    padding-bottom: 41px;
+    background-color: #262625;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.50);
+}
+
+.rodape .endereco h4 {
+    color: var(--branco);
+    font-family: Poppins;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 20px;
+}
+
+.rodape p {
+    color: var(--branco);
+    font-family: Poppins;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 45px;
+    margin-bottom: -5px;
+}
+.contatos {
+    align-self:flex-start;
+    margin-top:50px;
+}
+
+.inicio {
+    width: 120px;
+    height: 120px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    align-self: flex-end;
+    margin-right: -32px;
+}
+
+.mapinha {
+    margin-top: 20px;
+    border-radius: 15px;
 }
